# UniBox

./: .gitignore  README.md  pyproject.toml  test.json
.asset/: bus.txt
test/: test.py  test_bbox.py  test_dataset.py
unibox/: __init__.py  bbox.py  dataset.py  utils.py
unibox/formats/: __init__.py  labelme.py  voc.py  yolo.py
