[project]
name = "unibox"
version = "0.1.0"
description = "UniBox is a simple and efficient dataset management tool that supports conversion and processing of multiple formats, aiming to simplify the management and usage of det-datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26",
    "opencv-python>=4.11.0.86",
]
